deploy/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: joinaroom-app-service
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: joinaroom-app
  type: LoadBalancer
