deploy/templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: joinaroom-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - __DOMAIN_NAME__
      secretName: joinaroom-tls
  rules:
    - host: __DOMAIN_NAME__
      http:
        paths:
          - path: /
            backend:
              serviceName: joinaroom-app-service
              servicePort: 80
